--- a/nginx-ingress/restrict-annotations/restrict-annotations.yaml
+++ b/nginx-ingress/restrict-annotations/restrict-annotations.yaml
@@ -17,7 +17,7 @@ metadata:
       "annotation-value-word-blocklist" configuration setting is also recommended. 
       Please refer to the CVE for details. 
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   rules:
     - name: check-ingress
       match:
