--- a/other/block-pod-exec-by-pod-and-container/block-pod-exec-by-pod-and-container.yaml
+++ b/other/block-pod-exec-by-pod-and-container/block-pod-exec-by-pod-and-container.yaml
@@ -13,7 +13,7 @@ metadata:
       This policy blocks Pod exec commands to containers named `nginx` in Pods starting
       with name `myapp-maintenance`.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: false
   rules:
   - name: deny-nginx-exec-in-myapp-maintenance
