--- a/other/restrict-secrets-by-name/restrict-secrets-by-name.yaml
+++ b/other/restrict-secrets-by-name/restrict-secrets-by-name.yaml
@@ -18,7 +18,7 @@ metadata:
       result in a Secret being mounted.
 spec:
   background: false
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   rules:
   - name: safe-secrets-from-env
     match:
