--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/restricted-exclude-capabilities.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/restricted-exclude-capabilities.yaml
@@ -20,7 +20,7 @@ metadata:
       exempting `nginx` and `redis` container images from the Capabilities control check.
 spec:
   background: true
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   rules:
   - name: restricted-exempt-capabilities
     match:
