--- a/consul/enforce-min-tls-version/enforce-min-tls-version.yaml
+++ b/consul/enforce-min-tls-version/enforce-min-tls-version.yaml
@@ -13,7 +13,7 @@ metadata:
     policies.kyverno.io/description: >-
       This policy will check the TLS Min version to ensure that whenever the mesh is set, there is a minimum version of TLS set for all the service mesh proxies and this enforces that service mesh mTLS traffic uses TLS v1.2 or newer.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: true
   rules:
   - name: check-for-tls-version
