--- a/other/protect-node-taints/protect-node-taints.yaml
+++ b/other/protect-node-taints/protect-node-taints.yaml
@@ -17,7 +17,7 @@ metadata:
       requires, at minimum, one of the following versions of Kubernetes:
       v1.18.18, v1.19.10, v1.20.6, or v1.21.0.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: false
   rules:
   - name: protect-node-taints
