--- a/other-cel/restrict-sa-automount-sa-token/restrict-sa-automount-sa-token.yaml
+++ b/other-cel/restrict-sa-automount-sa-token/restrict-sa-automount-sa-token.yaml
@@ -3,10 +3,10 @@ kind: ClusterPolicy
 metadata:
   name: restrict-sa-automount-sa-token
   annotations:
-    policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens in Service Account 
-    policies.kyverno.io/category: Security
-    kyverno.io/kyverno-version: 1.11.1
-    kyverno.io/kubernetes-version: "1.27"
+    policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens in Service Account in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Secret,ServiceAccount
     policies.kyverno.io/description: >-
@@ -26,6 +26,8 @@ spec:
           kinds:
           - ServiceAccount
     validate:
-      message: "ServiceAccounts must set automountServiceAccountToken to false."
-      pattern:
-        automountServiceAccountToken: false
+      cel:
+        expressions:
+          - expression: "has(object.automountServiceAccountToken) && object.automountServiceAccountToken == false"
+            message: "ServiceAccounts must set automountServiceAccountToken to false."
+
