--- a/argo-cel/applicationset-name-matches-project/applicationset-name-matches-project.yaml
+++ b/argo-cel/applicationset-name-matches-project/applicationset-name-matches-project.yaml
@@ -3,18 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: applicationset-name-matches-project
   annotations:
-    policies.kyverno.io/title: Ensure ApplicationSet Name Matches Project
-    policies.kyverno.io/category: Argo
+    policies.kyverno.io/title: Ensure ApplicationSet Name Matches Project in CEL expressions
+    policies.kyverno.io/category: Argo in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: ApplicationSet
     policies.kyverno.io/description: >-
       This policy ensures that the name of the ApplicationSet is the
       same value provided in the project.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: match-name
@@ -23,15 +23,9 @@ spec:
         - resources:
             kinds:
               - ApplicationSet
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
       validate:
-        message: "The name must match the project."
-        pattern:
-          spec:
-            template:
-              spec:
-                project: "{{request.object.metadata.name}}"
+        cel:
+          expressions:
+            - expression: "object.spec.template.spec.project == object.metadata.name"
+              message: "The name must match the project."
+
