--- a/argo-cel/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
+++ b/argo-cel/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: appproject-clusterresourceblacklist
   annotations:
-    policies.kyverno.io/title: Enforce AppProject with clusterResourceBlacklist
-    policies.kyverno.io/category: Argo
+    policies.kyverno.io/title: Enforce AppProject with clusterResourceBlacklist in CEL expressions
+    policies.kyverno.io/category: Argo in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: AppProject
     policies.kyverno.io/description: >-
       An AppProject may optionally specify clusterResourceBlacklist which is a blacklisted
@@ -17,49 +17,20 @@ metadata:
       enforce that all AppProjects specify clusterResourceBlacklist and that their group
       and kind have wildcards as values.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
-    - name: has-wildcard
+    - name: has-wildcard-and-validate-clusterresourceblacklist
       match:
         any:
         - resources:
             kinds:
               - AppProject
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: AnyIn
-          value: ["CREATE", "UPDATE"]
       validate:
-        message: "Wildcards must be present in group and kind for clusterResourceBlacklist."
-        foreach:
-        - list: "request.object.spec.clusterResourceBlacklist"
-          deny:
-            conditions:
-              any:
-              - key: "{{ contains(element.group, '*') }}"
-                operator: Equals
-                value: false
-              - key: "{{ contains(element.kind, '*') }}"
-                operator: Equals
-                value: false
-    - name: validate-clusterresourceblacklist
-      match:
-        any:
-        - resources:
-            kinds:
-              - AppProject
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: AnyIn
-          value: ["CREATE", "UPDATE"]
-      validate:
-        message: "AppProject must specify clusterResourceBlacklist."
-        deny:
-          conditions:
-            any:
-            - key: clusterResourceBlacklist
-              operator: AnyNotIn
-              value: "{{ request.object.spec.keys(@) }}"
+        cel:
+          expressions:
+            - expression: "has(object.spec.clusterResourceBlacklist)"
+              message: "AppProject must specify clusterResourceBlacklist."
+            - expression: "object.spec.clusterResourceBlacklist.all(element, element.group.contains('*') && element.kind.contains('*'))"
+              message: "Wildcards must be present in group and kind for clusterResourceBlacklist."
+
