--- a/argo-cel/application-prevent-updates-project/application-prevent-updates-project.yaml
+++ b/argo-cel/application-prevent-updates-project/application-prevent-updates-project.yaml
@@ -3,17 +3,16 @@ kind: ClusterPolicy
 metadata:
   name: application-prevent-updates-project
   annotations:
-    policies.kyverno.io/title: Prevent Updates to Project
-    policies.kyverno.io/category: Argo
+    policies.kyverno.io/title: Prevent Updates to Project in CEL expressions
+    policies.kyverno.io/category: Argo in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.12.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Application
     policies.kyverno.io/description: >-
       This policy prevents updates to the project field after an Application is created.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: project-updates
@@ -22,16 +21,12 @@ spec:
         - resources:
             kinds:
               - Application
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: Equals
-          value: UPDATE
+      celPreconditions:
+        - name: "operation-should-be-update"
+          expression: "request.operation == 'UPDATE'"
       validate:
-        message: "The spec.project cannot be changed once the Application is created."
-        deny:
-          conditions:
-            any:
-            - key: "{{request.object.spec.project}}"
-              operator: NotEquals
-              value: "{{request.oldObject.spec.project}}"
+        cel:  
+          expressions:
+            - expression: "object.spec.project == oldObject.spec.project"
+              message: "The spec.project cannot be changed once the Application is created."
+
