--- a/kasten/kasten-generate-policy-by-preset-label/.chainsaw-test/chainsaw-step-03-apply-5.yaml
+++ b/kasten/kasten-generate-policy-by-preset-label/.chainsaw-test/chainsaw-step-03-apply-5.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    dataprotection: nothing
+    dataprotection: none
   name: k10-gp-label-ns04
