--- a/consul-cel/enforce-min-tls-version/.chainsaw-test/chainsaw-test.yaml
+++ b/consul-cel/enforce-min-tls-version/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-00
     try:
     - assert:
-        file: chainsaw-step-00-assert-1.yaml
+        file: crd-assert.yaml
   - name: step-01
     try:
     - apply:
