--- a/flux-cel/verify-flux-sources/.chainsaw-test/chainsaw-test.yaml
+++ b/flux-cel/verify-flux-sources/.chainsaw-test/chainsaw-test.yaml
@@ -19,19 +19,19 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
     - assert:
-        file: chainsaw-step-01-assert-2.yaml
+        file: bucket-crd-assert.yaml
     - assert:
-        file: chainsaw-step-01-assert-3.yaml
+        file: git-repository-crd-assert.yaml
     - assert:
-        file: chainsaw-step-01-assert-4.yaml
+        file: image-repository-crd-assert.yaml
     - assert:
-        file: chainsaw-step-01-assert-5.yaml
+        file: helm-repository-crd-assert.yaml
   - name: step-02
     try:
     - apply:
-        file: chainsaw-step-02-apply-1.yaml
+        file: ns.yaml
   - name: step-03
     try:
     - apply:
