--- a/istio-cel/enforce-strict-mtls/enforce-strict-mtls.yaml
+++ b/istio-cel/enforce-strict-mtls/enforce-strict-mtls.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: enforce-strict-mtls
   annotations:
-    policies.kyverno.io/title: Enforce Istio Strict mTLS
-    policies.kyverno.io/category: Istio
+    policies.kyverno.io/title: Enforce Istio Strict mTLS in CEL expressions
+    policies.kyverno.io/category: Istio in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: PeerAuthentication
-    kyverno.io/kyverno-version: 1.8.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >- 
       Strict mTLS requires that mutual TLS be enabled across the entire service mesh, which
       can be set using a PeerAuthentication resource on a per-Namespace basis and, if set on
@@ -18,7 +18,7 @@ metadata:
       This policy prevents disabling strict mTLS in a PeerAuthentication resource by requiring
       the `mode` be set to either `UNSET` or `STRICT`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: validate-mtls
@@ -28,8 +28,10 @@ spec:
           kinds:
           - PeerAuthentication
     validate:
-      message: "PeerAuthentication resources may only set UNSET or STRICT for the mode."
-      pattern:
-        =(spec):
-          =(mtls):
-            =(mode): "UNSET | STRICT"
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.spec) || !has(object.spec.mtls) || !has(object.spec.mtls.mode) || 
+              object.spec.mtls.mode in ['UNSET', 'STRICT']
+            message: "PeerAuthentication resources may only set UNSET or STRICT for the mode."
+
