--- a/istio-cel/enforce-tls-hosts-host-subnets/enforce-tls-hosts-host-subnets.yaml
+++ b/istio-cel/enforce-tls-hosts-host-subnets/enforce-tls-hosts-host-subnets.yaml
@@ -3,20 +3,20 @@ kind: ClusterPolicy
 metadata:
   name: enforce-tls-hosts-host-subnets
   annotations:
-    policies.kyverno.io/title: Enforce Istio TLS on Hosts and Host Subnets
-    policies.kyverno.io/category: Istio
+    policies.kyverno.io/title: Enforce Istio TLS on Hosts and Host Subnets in CEL expressions
+    policies.kyverno.io/category: Istio in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: DestinationRule
-    kyverno.io/kyverno-version: 1.8.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >- 
       Once a routing decision has been made, a DestinationRule can be used to define how traffic
       should be sent to another service. The trafficPolicy object can control how TLS is handled
       to the destination host. This policy enforces that the TLS mode cannot be set to a value
       of `DISABLE`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: destrule
@@ -26,9 +26,10 @@ spec:
           kinds:
           - DestinationRule
     validate:
-      message: "TLS may not be disabled for the trafficPolicy in any host."
-      pattern:
-        =(spec):
-          =(trafficPolicy):
-            =(tls):
-              =(mode): "!DISABLE"
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.spec) || !has(object.spec.trafficPolicy) || !has(object.spec.trafficPolicy.tls) || 
+              !has(object.spec.trafficPolicy.tls.mode) || object.spec.trafficPolicy.tls.mode != 'DISABLE'
+            message: "TLS may not be disabled for the trafficPolicy in any host."
+
