--- a/istio-cel/prevent-disabling-injection-pods/prevent-disabling-injection-pods.yaml
+++ b/istio-cel/prevent-disabling-injection-pods/prevent-disabling-injection-pods.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: prevent-disabling-injection-pods
   annotations:
-    policies.kyverno.io/title: Prevent Disabling Istio Sidecar Injection
-    policies.kyverno.io/category: Istio
+    policies.kyverno.io/title: Prevent Disabling Istio Sidecar Injection in CEL expressions
+    policies.kyverno.io/category: Istio in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.8.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       One way sidecar injection in an Istio service mesh may be accomplished is by defining
@@ -16,7 +16,7 @@ metadata:
       thereby reducing visibility. This policy ensures that Pods cannot set the annotation
       `sidecar.istio.io/inject` to a value of `false`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: prohibit-inject-annotation
@@ -26,8 +26,10 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Pods may not disable sidecar injection by setting the annotation sidecar.istio.io/inject to a value of false."
-      pattern:
-        metadata:
-          =(annotations):
-            =(sidecar.istio.io/inject): "!false"
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.metadata.annotations) || !('sidecar.istio.io/inject' in object.metadata.annotations) ||
+              object.metadata.annotations['sidecar.istio.io/inject'] != 'false'
+            message: "Pods may not disable sidecar injection by setting the annotation sidecar.istio.io/inject to a value of false."
+
