--- a/kubecost-cel/require-kubecost-labels/require-kubecost-labels.yaml
+++ b/kubecost-cel/require-kubecost-labels/require-kubecost-labels.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-kubecost-labels
   annotations:
-    policies.kyverno.io/title: Require Kubecost Labels
-    policies.kyverno.io/category: Kubecost
+    policies.kyverno.io/title: Require Kubecost Labels in CEL expressions
+    policies.kyverno.io/category: Kubecost in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Label
-    kyverno.io/kyverno-version: 1.10.0
-    kyverno.io/kubernetes-version: "1.25"
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Kubecost can use labels assigned to Pods in order to track and display
       cost allocation in a granular way. These labels, which can be customized, can be used
@@ -27,12 +27,14 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "The Kubecost labels `owner`, `team`, `department`, `app`, and `env` are all required for Pods."
-      pattern:
-        metadata:
-          labels:
-            owner: "?*"
-            team: "?*"
-            department: "?*"
-            app: "?*"
-            env: "?*"
+      cel:  
+        expressions:
+          - expression: >-
+              has(object.metadata.labels) && 
+              has(object.metadata.labels.owner) && object.metadata.labels.owner != '' && 
+              has(object.metadata.labels.team) && object.metadata.labels.team != '' &&
+              has(object.metadata.labels.department) && object.metadata.labels.department != '' &&
+              has(object.metadata.labels.app) && object.metadata.labels.app != '' &&
+              has(object.metadata.labels.env) && object.metadata.labels.env != ''
+            message: "The Kubecost labels `owner`, `team`, `department`, `app`, and `env` are all required for Pods."
+
