--- a/kubecost/require-kubecost-labels/.chainsaw-test/podcontroller-bad.yaml
+++ b/kubecost/require-kubecost-labels/.chainsaw-test/podcontroller-bad.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: busybox
+      foo: bar
   template:
     metadata:
       labels:
@@ -28,7 +28,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: busybox
+      owner: "foo"
   template:
     metadata:
       labels:
